# schedule-api

./: .gitignore  Cargo.toml
db/: dev-compose.yaml  schema.sql
schedule_api/: .env  Cargo.toml
schedule_api/src/: db.rs  error.rs  fetcher.rs  main.rs
schedule_api/src/db/: mod.rs
schedule_api/src/entities/: auditory.rs  auditory_type.rs  auditory_type_to_auditory.rs  building.rs  department.rs  direction.rs  event.rs  event_to_group.rs  event_to_teacher.rs  faculty.rs  group.rs  mod.rs  prelude.rs  speciality.rs  subject.rs  subject_to_teacher.rs  teacher.rs
schedule_api/src/fetcher/: file_fetcher.rs  mod.rs  web_fetcher.rs
schedule_api/src/models/: auditory.rs  auditory_type.rs  building.rs  department.rs  direction.rs  event.rs  event_type.rs  faculty.rs  group.rs  mod.rs  root.rs  speciality.rs  subject.rs  teacher.rs  university.rs
schedule_migrator/: Cargo.toml
schedule_migrator/src/: lib.rs  m20250215_000001_create_faculty.rs  m20250215_000002_create_department.rs  m20250215_000003_create_direction.rs  m20250215_000004_create_speciality.rs  m20250215_000005_create_group.rs  m20250215_000006_create_teacher.rs  m20250215_000007_create_subject.rs  m20250215_000008_create_subject_to_teacher.rs  m20250215_000009_create_building.rs  m20250215_000010_create_auditory_type.rs  m20250215_000011_create_auditory.rs  m20250215_000012_create_auditory_type_to_auditory.rs  m20250215_000013_create_event.rs  m20250215_000014_create_event_to_group.rs  m20250215_000015_create_event_to_teacher.rs
