[package]
name = "schedule_api"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
thiserror = "2.0"

log = "0.4"
env_logger = "0.11"

tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
