[package]
name = "schedule_api"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
thiserror = "2.0"
regex = "1"

log = "0.4"
env_logger = "0.11"

tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

encoding_rs = "0.8"
bytes = "1.10.0"

sea-orm = { version = "1.1", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros" ] }
sea-orm-migration = "1.1.0"
schedule_migrator = { path = "../schedule_migrator" }
